      You can control opacity and blend mode: normal, add or multiply.
      Blending works by mapping to the nearest master palette color, which
      is fast-enough but sometimes looks poor; there's a global setting to
      control how that's done. (Press Ctrl-F3 in the slice editor to preview
      what future 32-bit blending will look like!) [Ralph]
    * Numlock is now respected in both Game and Custom; when it's off numpad
      keys are also mapped to other keys, so you can use the numpad for
      movement.  When it's on, no remapping happens. (You can disable
      remapping with Ctrl-Shift-N.) [Ralph]
    * "Dead Foe (dead heroes only)" and "Foe (including dead heroes)" attack
      target classes [Ralph]
    * Title Screen Text; a quick and easy way to put a line of text like
      a version number at the bottom of the title screen [James]
    * "Reset UI Colors/Box Styles to defaults" options in the Master Palettes
      menu, and F4 rescue key [Ralph]
    * While encoding .ogg files, added an advanced option not to filter out
      very high frequencies. Useful for sfx (eg rain) with hiss noises [Ralph]

   * New Plotscripting Features
    * ""any key", etc, includes mouse" option in Mouse Controls menu [Ralph]
    * "get scancode name" [Ralph]
    * "get hero slice by slot", "get hero sprite by slot",
      "hero slot from slice" [Ralph]
    * Global script triggers for when a hero is added, deleted, or swapped to
      a different slot [Ralph]

  *** Changes
    * Renamed "Enemy" target class to "Foe (not dead)", and "Ally" to
      "Ally (not dead)"
    * Empty active party slots no longer have hidden dummy hero slices, while
      reserve party heroes *do* have slices, so hero slices are now preserved
      until you save and reload the game. They're parented to a new hidden
      'Reserve' special slice [Ralph]

  *** Bugfixes
    * Linux builds should now hopefully work on all Linux systems since 2011