@@ -316,7 +316,7 @@ CONST inventoryMax = 599 'last inventory slot num (divisible by 3 when you count
 CONST maxTextboxLines = 8 'Maximum number of lines in a text box
 CONST maplayerMax = 15 'The limit on the highest numbered map layer
 CONST mapTilesMax = 100000 'Maximum map size, in tiles (note also a limit of 32768 tiles wide or high)
-CONST dissolveTypeMax = 11 'Highest numbered frame dissolve effect
+CONST dissolveTypeMax = 17 'Highest numbered frame dissolve effect
 CONST maxMPLevel = 7   'Max level of FF1-style level-MP, 0-based (Note: the spell-list editor shows 1-based levels)
 CONST maxElements = 64 'Maximum selectable number of elements
 CONST maxDoorsPerMap = 99 '0 thru 99
