@@ -8164,20 +8164,41 @@ set horiz align(sl, edge:right)
 		<command id="dissolvesprite">
 			<canon>dissolve sprite (handle, dissolve type, total ticks, start tick, backwards, automatic)</canon>
 			<shortname>dissolve sprite</shortname>
-			<description>Dissolve a sprite using pre-defined dissolve animations. The first argument is a sprite slice <p>handle</p>. The second argument is the <p>dissolve type</p>. There are dissolve:name constants with the same names as the enemy dissolve animations. Valiid dissolve type constands include:
-<p>dissolve:random scatter</p>, 
-<p>dissolve:crossfade</p>, 
-<p>dissolve:diagonal vanish</p>, 
-<p>dissolve:sink into ground</p>, 
-<p>dissolve:squash</p>, 
-<p>dissolve:melt</p>, 
-<p>dissolve:vapourise</p>, 
-<p>dissolve:phase out</p>, 
-<p>dissolve:squeeze</p>, 
-<p>dissolve:shrink</p>, 
-<p>dissolve:flicker</p>.
-<p>dissolve:shrink to center</p>, 
-The third argument is the total number of ticks that the animation should run. You can use dissolvetime:default or -1 for the default number of ticks, which is equal to the sprites (width + height) / 10. The fourth argument is the tick to start on, or 0 to start from the beginning. The fifth argument is false for a normal dissolve, or true for a backwards dissolve. The sixth argument is true for an automatic dissolve (the default), or false to prevent the dissolve animation from proceeding automatically, in case you want to manually control it.</description>
+			<description>
+				Dissolve a sprite using pre-defined dissolve animations.
+				The first argument is a sprite slice <p>handle</p>.
+				The second argument is the <p>dissolve type</p>.
+				There are <tt>dissolve:name</tt> constants with the same names as the enemy dissolve animations.
+				<lb/>
+				The valid dissolve type constants are:
+				<p>dissolve:random scatter</p>,
+				<p>dissolve:crossfade</p>,
+				<p>dissolve:diagonal vanish</p>,
+				<p>dissolve:sink into ground</p>,
+				<p>dissolve:squash</p>,
+				<p>dissolve:melt</p>,
+				<p>dissolve:vapourise</p>,
+				<p>dissolve:phase out</p>,
+				<p>dissolve:squeeze</p>,
+				<p>dissolve:shrink</p>,
+				<p>dissolve:flicker</p>.
+				<p>dissolve:shrink to center</p>,
+				<p>dissolve:fade</p>,
+				<p>dissolve:ghostly fade</p>,
+				<p>dissolve:fade to white</p>,
+				<p>dissolve:evaporate</p>,
+				<p>dissolve:evaporate up</p>,
+				<p>dissolve:blip</p>.
+				<lb/>
+				The third argument is the total number of ticks that the animation should run.
+				You can use <tt>dissolvetime:default</tt> or <tt>-1</tt> for the default number of ticks,
+				which is equal to the sprites <tt>(width + height) / 10</tt>
+				(this is not the same as the default length for enemy dissolves!)
+				The fourth argument is the tick to start on, or 0 to start from the beginning.
+				The fifth argument is false for a normal dissolve, or true for a backwards dissolve.
+				The sixth argument is true for an automatic dissolve (the default),
+				or false to prevent the dissolve animation from proceeding automatically, in case you want to manually control it.
+			</description>
 			<seealso>
 				<ref>canceldissolve</ref>
 				<ref>spriteisdissolving</ref>
